# mir

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  Cargo.toml  LICENSE  README.md  rustfmt.toml  version.sh
.github/workflows/: release.yml  rust.yml
src/: main.rs  model.rs
