[package]
name = "mir"
version = "0.0.0"
authors = ["Nicholas Omer Chiasson <nicholasomerchiasson@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Tool to mirror a user's entire accessible GitLab group hierarchy locally and optionally clone all projects."
readme = "README.md"
homepage = "https://gitlab.com/leschiassons/tools/mir"
repository = "https://gitlab.com/leschiassons/tools/mir"
keywords = ["cli", "gitlab", "setup"]
categories = ["command-line-utilities"]

[badges]
gitlab = { repository = "leschiassons/tools/mir" }
maintenance = { status = "passively-maintained" }

[dependencies]
dirs = "4.0.0"
git2 = "0.13.25"
gitlab = "0.1111.0"
indicatif = "0.16.2"
num = "0.4.0"
rpassword = "6.0.1"
structopt = "0.3.26"
