[package]
name = "mir"
version = "0.0.0"
authors = ["Nicholas Omer Chiasson <nicholasomerchiasson@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Tool to mirror a user's entire accessible GitLab group hierarchy locally and optionally clone all projects."
readme = "README.md"
homepage = "https://gitlab.com/leschiassons/tools/mir"
repository = "https://gitlab.com/leschiassons/tools/mir"
keywords = ["cli", "gitlab", "setup"]
categories = ["command-line-utilities"]

[badges]
gitlab = { repository = "leschiassons/tools/mir" }
maintenance = { status = "passively-maintained" }

[dependencies]
dirs = "4.0"
git2 = "0.14"
gitlab = "0.1111"
indicatif = "0.16"
num = "0.4"
rpassword = "6.0"
structopt = "0.3"
