[package]
name = "mir"
version = "0.0.0"
authors = ["Nicholas Omer Chiasson <nicholasomerchiasson@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Tool to mirror a user's entire accessible GitLab group hierarchy locally and optionally clone all projects."
readme = "README.md"
homepage = "https://github.com/nicholaschiasson/mir"
repository = "https://github.com/nicholaschiasson/mir"
keywords = ["cli", "gitlab", "setup"]
categories = ["command-line-utilities"]

[badges]
github = { repository = "nicholaschiasson/mir" }
maintenance = { status = "passively-maintained" }

[dependencies]
clap = { version = "3.0", features = ["derive"] }
dirs = "4.0"
git2 = "0.14"
gitlab = "0.1500"
indicatif = "0.16"
rpassword = "6.0"
serde = "1.0"
